# SoftIO

./: .gitignore  README.md  fifo.h  softio.h
SoftF103/: .mxproject  SoftF103.ioc
SoftF103-MCU/: .mxproject  SoftF103-MCU.ioc
SoftF103-MCU/Core/Inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
SoftF103-MCU/Core/Src/: adc.c  dma.c  gpio.c  main.c  spi.c  stm32f1xx_it.c  tim.c  usart.c
SoftF103-MCU/MDK-ARM/: SoftF103-MCU.uvprojx
SoftF103-MCU/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
SoftF103-PC/: Blink.cpp  CMakeLists.txt  Dump.cpp  GPIOWrite.cpp  HostSteppingMotor.cpp  PWMOutput.cpp  ReadADC.cpp  RecordSolar2KhzSignal.cpp  SteppingMotor.cpp  StreamingADC.cpp  TestAutoSolarPanel.cpp  TestSolarPanelMaximumPower.cpp  mqtt.h  softf103-ex.h  softf103.h
SoftF103-PC/emulator/: Makefile  softf103-pseudo.cpp
SoftF103/Core/Inc/: stm32f1xx_hal_conf.h
SoftF103/Core/Src/: gpio.c  main.c  stm32f1xx_it.c
SoftF103/MDK-ARM/: SoftF103.uvoptx  SoftF103.uvprojx  startup_stm32f103xb.s
SteppingMotorGUI/: index.html
serial/: list_ports_linux.cc  serial.cc  unix.cc  win.cc
